--- a/style.css
+++ b/style.css
@@ -144,8 +144,8 @@ http://127.0.0.1:5500/assets/general/hero.jpg	font-size: 15px;
 	position:absolute;
 	top: 55%;
 	left: 220px;
-	color: white;
-	border-color: white;
+	color: black;
+	border-color: none;
 }
 
 .text-uu{
@@ -217,7 +217,11 @@ text-align: center;
 }
 
 
-
+.sqs-block-image:hover {
+  -webkit-filter: none !important; 
+  filter: none !important;
+	transition: 0.5s ease-in-out;
+}
      
 .slider-images{
   width: 100%;
@@ -230,7 +234,7 @@ text-align: center;
   width: 200%;
   display: flex;
   gap: 7;
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 .slider {
@@ -241,7 +245,7 @@ text-align: center;
 
 @keyframes scroll {
   0% {transform: translateX(0);}
-  100% {transform: translatex(-1000%)}
+  100% {transform: translatex(-800%)}
 }
  
 
