--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@
 body{
 	
 	font-family: 'Poppins', sans-serif;
-	overflow-x:hidden
+	
 }
 
+.wrapper{
+	overflow-x: hidden;
+}
 .top-bar{
   width: 100%;
   height: 40px;
