--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ http://127.0.0.1:5500/assets/general/hero.jpg	font-size: 15px;
   font-weight: 700;
 }
 
+
 .primarybtn{
 	position:absolute;
 	top: 55%;
@@ -143,13 +144,15 @@ http://127.0.0.1:5500/assets/general/hero.jpg	font-size: 15px;
 	
 }
 
+
 .secondarybtn{
 	position:absolute;
 	top: 55%;
-	left: 15vw;
+	left: 3.5vh;
 	color: black;
 	border-color: none;
 }
+
 
 .text-uu{
 	text-decoration: underline #d4af37 2px;
